# Vortex

./: .dockerignore  .gitignore  AUTHORS  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  dune-project  ocaml-crypto-linter-rules.opam  ocaml-crypto-linter.descr  ocaml-crypto-linter.opam  prepare-release.sh  test_existing_rules.ml  test_protocol_detection.ml  test_protocol_rules.ml  test_protocol_rules_real.ml  test_protocol_simple.ml  test_sample.ml  test_single_string.ml  test_standalone.ml  validate-opam.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_rule.md
.github/workflows/: benchmark.yml  ci.yml  docker.yml  docs.yml  integration.yml  release.yml  security.yml
_build/: .digest-db  log
docs/: architecture.md  hybrid-analyzer-usage.md  index.md  intelligence-table.md  rule-research.md  supply_chain_enhancements.md  zkp_rules_summary.md
docs/design/: protocol_rules_design.md  sidechannel_adv_design.ml  supplychain_design.ml  zkp_design.ml
docs/examples/: common-vulnerabilities.md
docs/guides/: ci-integration.md  cli-reference.md  configuration.md  faq.md  installation.md  output-formats.md  quickstart.md  writing-rules.md
docs/rules/: algorithm-weakness.md  index.md
examples/: confidence_demo.ml  interprocedural_example.ml
src/: dune  parallel_stubs.c  parallel_stubs.ml
src/analyzer/: analyzer.ml  analyzer_types.ml  confidence_scoring.ml  context_manager.ml  dataflow_cfg.ml  file_analyzer.ml  import_tracker.ml  interprocedural.ml  parallel_engine.ml  semgrep_integration.ml
src/common/: types.ml  utils.ml
src/dune_plugin/: dune  dune_crypto_linter.ml
src/lsp/: lsp_server.ml
src/parser/: advanced_parser.ml  ast_analyzer.ml  typedtree_analyzer.ml
src/reporter/: json_reporter.ml  json_reporter_v2.ml  sarif_reporter.ml
src/rules/: algorithm_weakness_rules.ml  algorithm_weakness_rules_v2.ml  api_misuse_rules.ml  api_misuse_rules_v2.ml  cve_rules.ml  dependency_rules.ml  key_nonce_rules.ml  protocol_rules.ml  rule_engine.ml  rules.ml  side_channel_rules.ml  side_channel_rules_v2.ml  sidechannel_adv.ml  sidechannel_enhanced.ml  supplychain_rules.ml  zkp_rules.ml
test/: test_confidence_scoring.ml  test_interprocedural.ml  test_interprocedural_runner.ml
test_samples/: run_tests.sh
test_samples/real_world/: jwt_implementation.ml
test_samples/vulnerable/: edge_cases.ml  hardcoded_keys.ml  weak_algorithms.ml
tests/: README.md  run_validation.py
tests/integration/: hash_collision_dos.ml  simple_test.ml  vulnerable_tls_patterns.ml
tests/integration/dependency_test/: opam
tests/reports/: protocol_rules_validation.md  sidechannel_adv_validation.md
tests/samples/secure/: good_crypto.ml  protocol_secure_patterns.ml
tests/samples/vulnerable/: api_misuse.ml  test_supply_chain_deps.ml  test_zkp_simple.ml  timing_attacks.ml
validation/: crypto_audit_report.md  crypto_lint_report.sarif  vulnerable_cryptokit_examples.ml
